Page MenuHome GnuPG

Progress handler callback isn't called often enough during /dev/random reading
Closed, ResolvedPublic

Description

Progress handler callback is very rarely (if ever) called when gathering entropy
for Linux. It's called only when there hasn't been any progress for last 3
seconds, but at least in my system that doesn't happen often. Attached patch
makes it report an update after every few bytes of data read from /dev/random. I
think rndunix.c should have a similar change.

Related Objects

Event Timeline

werner lowered the priority of this task from Normal to Wishlist.Dec 10 2013, 3:06 PM
werner added a project: Feature Request.
werner removed a project: Bug Report.

Done something similar for master; needs to be backported to 1.5.

I don't think it makes sense to backport it to 1.5 - it has been this way for so
long. Users of 1.5 should upgrade to 1.6.0.

werner claimed this task.
werner removed a project: Restricted Project.