random: Call random progress handler more often.

* random/rndlinux.c (_gcry_rndlinux_gather_random): Update progress
indicator earlier.
--

GnuPG-bug-id: 1531
Signed-off-by: Werner Koch <wk@gnupg.org>